gobmkida/c2/gtp_owl_does_attack
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_owl_does_attack/src/interface/play_gtp.c:1916:34: error: use of undeclared identifier 'gtp_print_code_conversion'
gtp_printf( "%d", ( unsigned int)gtp_print_code_conversion[does_attack]); 
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/gtp_owl_does_attack/src/obj/2/play_gtp.o] Error 1
